tests/messages/errors/dt_ts_error.hl7
MSH|^~\&|TEST_SENDER|FAC|REC|FAC|20260308213000||ADT^A01|MSG_DT_TS_ERR|P|2.5
EVN|A01|20261301240000
PID|||12345||Smith^John||20260230|M
